--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="create_account">Create Account</string>
     <string name="cancel">Cancel</string>
     <string name="Username">Username</string>
+    <string name="start_workout">Start Workout</string>
+    <string name="pause_workout">Pause Workout</string>
+    <string name="stop_workout">Stop Workout</string>
 </resources>
