--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="Username">Username</string>
     <string name="start_workout">Start Workout</string>
     <string name="pause_workout">Pause Workout</string>
+    <string name="resume_workout">Resume Workout</string>
     <string name="stop_workout">Stop Workout</string>
+    <string name="complete_workout">Complete Workout</string>
 </resources>
