--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="stop_workout">Stop Workout</string>
     <string name="complete_workout">Complete Workout</string>
     <string name="map_descriptor">Game Map</string>
+    <string name="close">Close</string>
 </resources>
