--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="complete_workout">Complete Workout</string>
     <string name="map_descriptor">Game Map</string>
     <string name="close">Close</string>
+    <string name="travel">Travel</string>
 </resources>
