--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="map_descriptor">Game Map</string>
     <string name="close">Close</string>
     <string name="travel">Travel</string>
+    <string name="workout_records">Workout Records</string>
 </resources>
