--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="close">Close</string>
     <string name="travel">Travel</string>
     <string name="workout_records">Workout Records</string>
+    <string name="settings">Settings</string>
 </resources>
