--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="travel">Travel</string>
     <string name="workout_records">Workout Records</string>
     <string name="settings">Settings</string>
+    <string name="dismiss">Dismiss</string>
 </resources>
