--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="workout_records">Workout Records</string>
     <string name="settings">Settings</string>
     <string name="dismiss">Dismiss</string>
+    <string name="leave">Leave</string>
 </resources>
