--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="settings">Settings</string>
     <string name="dismiss">Dismiss</string>
     <string name="leave">Leave</string>
+    <string name="end_turn">End Turn</string>
+    <string name="enemy_turn">Enemy Turn</string>
 </resources>
