--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="dismiss">Dismiss</string>
     <string name="leave">Leave</string>
     <string name="end_turn">End Turn</string>
+    <string name="ready">Ready</string>
     <string name="enemy_turn">Enemy Turn</string>
 </resources>
